free text search now works.
better e handlers for search select.

--- a/client/src/styles/components/forms/Filter/Filter.scss
+++ b/client/src/styles/components/forms/Filter/Filter.scss
@@ -37,6 +37,9 @@
             .enhanced-dropdown {
                 margin: 0;
                 width: 150px;
+                .actual-dropdown {
+                    width: fit-content;
+                }
             }
         }
     }
