--- a/client/src/styles/components/forms/form-utilities.scss
+++ b/client/src/styles/components/forms/form-utilities.scss
@@ -30,7 +30,7 @@
     font-size: $m-size;
   }
   h6 {
-    margin-top: 0;
+    margin-top: 10px;
     font-size: $s-size;
   }
   label {
@@ -59,6 +59,15 @@
       }
     }
   }
+  .reset {
+    border-radius: 15px;
+    display: block;
+    margin: 0 auto;
+    background-color: $yad2-orange;
+    color: $body-white;
+    padding: 5px 10px;
+    border: none;
+  }
 }
 
 .submit-container,
@@ -75,8 +84,6 @@
   }
   margin: $m-size 0;
 }
-
-
 
 .fields {
   // background-color: $body-white;
